--- a/telegram-bot/public/index.html
+++ b/telegram-bot/public/index.html
@@ -264,6 +264,10 @@
                 <button class="modal-close" id="closeUploadModal">&times;</button>
             </div>
             <div class="modal-body">
+                <!-- Hidden file inputs -->
+                <input type="file" id="cameraInput" accept="image/*" capture="environment" style="display: none;">
+                <input type="file" id="galleryInput" accept="image/*" style="display: none;">
+                
                 <div class="upload-options">
                     <button class="btn btn-secondary btn-large" id="cameraBtn">
                         📷 <span data-i18n="take_photo">Take Photo</span>
